# hoox

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  NOTICE  README.md  README_en.md  _classify.py  _delfn.py  _plan.json
.github/workflows/: ci.yml
build32/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build32/Testing/Temporary/: CTestCostData.txt
build32/amalgam/: hoox.c  hoox.h
build32/src/: cmake_install.cmake
build32/tests/: CTestTestfile.cmake  cmake_install.cmake
docs/: API.md  API_en.md  PLAN.md  PORTING.md  SOURCE_AUDIT.md  TASKS.md
example/: CMakeLists.txt  README.md  hook_example.c
include/: hoox.h
src/: CMakeLists.txt  hoox_placeholder.c
src/arch/arm/: gumarmreg.h  gumarmwriter.h  gumthumbwriter.h  hooxarmreader.c  hooxarmreader.h  hooxarmreg.c  hooxarmreg.h  hooxarmrelocator.c  hooxarmrelocator.h  hooxarmwriter.c  hooxarmwriter.h  hooxthumbreader.c  hooxthumbreader.h  hooxthumbrelocator.c  hooxthumbrelocator.h  hooxthumbwriter.c  hooxthumbwriter.h
src/arch/arm64/: gumarm64writer.h  hooxarm64reader.c  hooxarm64reader.h  hooxarm64relocator.c  hooxarm64relocator.h  hooxarm64writer.c  hooxarm64writer.h
src/arch/x86/: gumx86writer.h  hooxx86reader.c  hooxx86reader.h  hooxx86relocator.c  hooxx86relocator.h  hooxx86writer.c  hooxx86writer.h
src/backend/android/: hooxandroid.c  hooxandroid.h
src/backend/arm/: hooxcpu-arm.c  hooxcpucontext-arm.c  hooxinterceptor-arm.c
src/backend/arm64/: hooxcpucontext-arm64.c  hooxinterceptor-arm64.c
src/backend/darwin/: hoox_process-darwin.c  hooxcodesegment-darwin.c  hooxdarwin.h  hooxmemory-darwin.c  hooxpatch-darwin.c
src/backend/freebsd/: hoox_process-freebsd.c  hooxmemory-freebsd.c
src/backend/linux/: hoox_process-linux.c  hooxlinux-priv.h  hooxmemory-linux.c
src/backend/posix/: hooxmemory-posix.c  hooxtls-posix.c
src/backend/windows/: gum_msvc_intrinsics.c  gummemory-windows.c  gumtls-windows.c  gumwindows.h  hoox_process-windows.c  hooxmemory-windows.c  hooxtls-windows.c  hooxwindows.h
src/backend/x86/: gumcpu-x86.c  hooxcpu-x86.c  hooxcpucontext-x86.c  hooxinterceptor-x86.c
src/compat/: hxarray.c  hxarray.h  hxatomic.h  hxdefs.h  hxglib.h  hxhash.c  hxhash.h  hxlist.c  hxlist.h  hxmem.c  hxmem.h  hxmessages.h  hxstrfuncs.c  hxstrfuncs.h  hxstring.c  hxstring.h  hxthread.c  hxthread.h
src/core/: gum.c  gum.h  gumcloak-priv.h  gumcloak-stub.c  gumcloak.h  gumcodeallocator.c  gumcodesegment.h  gumdefs.h  guminterceptor.c  guminterceptor.h  guminvocationcontext.h  guminvocationlistener.c  guminvocationlistener.h  gumlibc.h  gummemory.c  gummemory.h  gummetalarray.h  gummetalhash.h  gummodule.h  gumprocess.h  gumreturnaddress.h  gumspinlock.h  gumsysinternals.h  gumtls.h  hoox.c  hoox.h  hooxcloak-priv.h  hooxcloak-stub.c  hooxcloak.h  hooxcodeallocator.c  hooxcodeallocator.h  hooxcodesegment.c  hooxcodesegment.h  hooxdefs.h  hooxfunction.h  hooxinterceptor-priv.h  hooxinterceptor.c  hooxinterceptor.h  hooxinvocationcontext.c  hooxinvocationcontext.h  (+21 more)
src/disasm/: capstone.h  hx_disasm.h  hx_disasm_arm.c  hx_disasm_arm64.c  hx_disasm_x86.c
tests/: CMakeLists.txt
tests/compat/: test_compat.c
tests/core/: hoox_targetfunctions.c  interceptor-callbacklistener.c  interceptor-callbacklistener.h  interceptor-functiondatalistener.c  interceptor-functiondatalistener.h  test_cpu_context.c  test_fork.c  test_interceptor.c  test_interceptor_limits.c  test_interceptor_listener_snapshot.c  test_interceptor_selfhost.c  test_interceptor_smoke.c  test_interceptor_threads.c  test_memory.c
tests/core/arch-x86/: run_arch_x86.c  x86relocator-fixture.c  x86relocator.c  x86writer-fixture.c  x86writer.c
tests/disasm/: diff_capstone.py  hx_disasm_dump.c  test_arm64_decode.c  test_arm_decode.c  test_x86_decode.c
tests/harness/: test_harness_sample.c  testrunner.c  testrunner.h  testutil.c  testutil.h
tools/: amalgamate.py
